--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .bg{
-    background-image: url(images/Ipohbg.jpg);
+    background-image: url(Images/Ipohbg.jpg);
     height: 100%;
     background-position:center;
     background-size:cover;
